fe/hearth-489 vertical-alignment fix

--- a/app/app/styles/_flags.scss
+++ b/app/app/styles/_flags.scss
@@ -32,8 +32,10 @@
 }
 .language-small-wrapper{
 	position: relative;
-	top: -2px;
+	vertical-align: top;
+	top: 3px;
 	font-size: 1rem !important;
+
 	.fa-inverse{
 		color: $colorOrange;
 	}
